--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -206,6 +206,7 @@ h1, h2, h3, h4, h5, h6 {
   padding: 0;
   margin: 0 0 20px;
   line-height: 1.2;
+  font-size: 32px;
 }
 
 p, ul, ol, table, pre, dl {
@@ -242,7 +243,7 @@ img {
 }
 
 code, pre {
-  font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal;
+  font-family: Monaco, Bitstream Vera Sans Mono, Lucida Console, Terminal, monospace;
   color: #333;
   font-size: 14px;
   overflow-x: auto;
@@ -251,11 +252,14 @@ code, pre {
 pre {
   padding: 20px;
   background: #3A3C42;
+/*  background: #e5ffd9;*/
   color: #f8f8f2;
+/*  color: #000000;*/
   margin: 0 -20px 20px;
 }
 pre code {
   color: #f8f8f2;
+/*  color: #000000;*/
 }
 li pre {
   margin-left: -60px;
