--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -69,11 +69,9 @@ header {
   border-bottom: 1px solid #B2D2E1;
 }
 .inset-text {
-    /* Shadows are visible under slightly transparent text color */
     color: rgba(10,60,150, 0.8);
-    text-shadow: 1px 4px 6px #def, 0 0 0 #000, 1px 4px 6px #def;
+    text-shadow: 1px 2px 2px #def, 0 0 0 #000, 1px 2px 2px #def;
 }
-/* Don't show shadows when selecting text */
 ::-moz-selection { background: #5af; color: #fff; text-shadow: none; }
 ::selection { background: #5af; color: #fff; text-shadow: none; }
 
@@ -202,7 +200,6 @@ section {
 }
 
 h1, h2, h3, h4, h5, h6 {
-  color: #222;
   padding: 0;
   margin: 0 0 20px;
   line-height: 1.2;
@@ -222,7 +219,8 @@ h1 {
 }
 
 h2 {
-  color: #393939;
+  color: rgb(40,40,40);
+/*  color: #393939;*/
 }
 
 h3, h4, h5, h6 {
